force-app/main/default/objects/Lead/fields/Aggregator_Name__c.field-meta.xml
<CustomField>
    <fullName>Aggregator_Name__c</fullName>
    <label>Aggregator Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>