force-app/main/default/objects/Lead/fields/Budget_Max__c.field-meta.xml
<CustomField>
    <fullName>Budget_Max__c</fullName>
    <label>Budget Max</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>