force-app/main/default/objects/Lead/fields/Budget_Min__c.field-meta.xml
<CustomField>
    <fullName>Budget_Min__c</fullName>
    <label>Budget Min</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>