force-app/main/default/objects/Lead/fields/Lead_Score__c.field-meta.xml
<CustomField>
    <fullName>Lead_Score__c</fullName>
    <label>Lead Score</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Hot</fullName><default>false</default><label>Hot</label></value>
            <value><fullName>Warm</fullName><default>false</default><label>Warm</label></value>
            <value><fullName>Cold</fullName><default>false</default><label>Cold</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>