force-app/main/default/objects/Lead/fields/Lead_Score_Rationale__c.field-meta.xml
<CustomField>
    <fullName>Lead_Score_Rationale__c</fullName>
    <label>Lead Score Rationale</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>