force-app/main/default/objects/Lead/fields/Location_Preference__c.field-meta.xml
<CustomField>
    <fullName>Location_Preference__c</fullName>
    <label>Location Preference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>