force-app/main/default/objects/Lead/fields/NRI_Flag__c.field-meta.xml
<CustomField>
    <fullName>NRI_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NRI Flag</label>
    <type>Checkbox</type>
</CustomField>