force-app/main/default/objects/Lead/fields/Project_Code_Text__c.field-meta.xml
<CustomField>
    <fullName>Project_Code_Text__c</fullName>
    <description>Rendered project code from Project_Interest lookup. Created for assignment rule criteria, which cannot traverse Lookup __r references directly. Per E05.</description>
    <formula>Project_Interest__r.Project_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Code (Text)</label>
    <type>Text</type>
</CustomField>