force-app/main/default/objects/Lead/fields/Project_Interest__c.field-meta.xml
<CustomField>
    <fullName>Project_Interest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Interest</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Interested Leads</relationshipLabel>
    <relationshipName>Interested_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>