force-app/main/default/objects/Lead/fields/Source_CP__c.field-meta.xml
<CustomField>
    <fullName>Source_CP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source CP</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads Sourced</relationshipLabel>
    <relationshipName>Leads_Sourced</relationshipName>
    <type>Lookup</type>
</CustomField>