force-app/main/default/objects/Lead/fields/Suggested_Units__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Units__c</fullName>
    <label>Suggested Units</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>