force-app/main/default/objects/Lead/fields/Unit_Type_Preference__c.field-meta.xml
<CustomField>
    <fullName>Unit_Type_Preference__c</fullName>
    <label>Unit Type Preference</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>1BHK</fullName><default>false</default><label>1BHK</label></value>
            <value><fullName>2BHK</fullName><default>false</default><label>2BHK</label></value>
            <value><fullName>3BHK</fullName><default>false</default><label>3BHK</label></value>
            <value><fullName>4BHK</fullName><default>false</default><label>4BHK</label></value>
            <value><fullName>Shop</fullName><default>false</default><label>Shop</label></value>
            <value><fullName>Office</fullName><default>false</default><label>Office</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>