force-app/main/default/objects/Lead/fields/Urgency__c.field-meta.xml
<CustomField>
    <fullName>Urgency__c</fullName>
    <label>Urgency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Immediate</fullName><default>false</default><label>Immediate</label></value>
            <value><fullName>3 months</fullName><default>false</default><label>3 months</label></value>
            <value><fullName>6 months</fullName><default>false</default><label>6 months</label></value>
            <value><fullName>Exploring</fullName><default>true</default><label>Exploring</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>