force-app/main/default/objects/Lead/recordTypes/Commercial_Lead.recordType-meta.xml
<RecordType>
    <fullName>Commercial_Lead</fullName>
    <active>true</active>
    <label>Commercial Lead</label>
</RecordType>