force-app/main/default/objects/Lead/recordTypes/Residential_Lead.recordType-meta.xml
<RecordType>
    <fullName>Residential_Lead</fullName>
    <active>true</active>
    <label>Residential Lead</label>
</RecordType>